syntax = "proto3";
package pb;
option go_package = "/services/getmem/protogetmem";

import "google/api/annotations.proto";


//Описание сервиса Get
service GetmemService {

  //Возвращает запись по SLUG
  rpc Get (GetMemRequest) returns (GetMemResponse) {
    option (google.api.http) = {
      get: "/api/v1/get/{Slug}"
    };
  }

}

//------------------------------------------------------------------------------------------------------------------
//  GET
//------------------------------------------------------------------------------------------------------------------
message GetMemRequest {
  string Slug = 1;
}
message GetMemResponse {
  Memget Memget = 1;
}

//------------------------------------------------------------------------------------------------------------------
//  COMMENT
//------------------------------------------------------------------------------------------------------------------
message Memget {
  string Slug = 1;
  string ParentId = 2;
  string UserId = 3;
  string PostId = 4;
  string Content = 5;
  int32 Status = 6;

}